Add the Product home tab, and a dummy list of expired products and products to expire, with the specific filters of the API

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template (TypeScript)",
+    "name": "House stock",
     "slug": "stock_house_system",
     "privacy": "public",
     "sdkVersion": "36.0.0",
